--- a/libpythonpro/.github/workflows/test.yml
+++ b/libpythonpro/.github/workflows/test.yml
@@ -28,3 +28,7 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
+name: Coverage
+env:
+  CODECOV_TOKEN: "5da56eec-bc6e-4575-a585-db2c5fd30e55"
