--- a/libpythonpro/.github/workflows/test.yml
+++ b/libpythonpro/.github/workflows/test.yml
@@ -20,15 +20,19 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install codecov
         pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements-dev.txt; fi
+        pip install -r requirements-dev.txt
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
-name: Coverage
-env:
-  CODECOV_TOKEN: "5da56eec-bc6e-4575-a585-db2c5fd30e55"
+    - name: Teste de código com pytest
+      run: |
+        pytest --cov=LibPythonPro
+    - name: Cobertura de testes com codecov
+      uses: codecov/codecov-action@v1
+      with:
+        token: ${{secrets.CODECOV_TOKEN}}
