--- a/libpythonpro/.github/workflows/test.yml
+++ b/libpythonpro/.github/workflows/test.yml
@@ -35,4 +35,5 @@ jobs:
     - name: Cobertura de testes com codecov
       uses: codecov/codecov-action@v2
       with:
+        fail_ci_if_error: true
         token: ${{secrets.CODECOV_TOKEN}}
