--- a/libpythonpro/.github/workflows/test.yml
+++ b/libpythonpro/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Teste de código com pytest
       run: |
-        pytest --cov=LibPythonPro
+        pytest --cov=libpythonpro
     - name: Cobertura de testes com codecov
       uses: codecov/codecov-action@v1
       with:
