--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install codecov
         pip install flake8 pytest
-        pip install -r requirements-dev.txt
+        pip install -q pipenv
+        pipenv sync --dev
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
